@@ -5,8 +5,10 @@ win32-loader (0.6.0~pre4) UNRELEASED; urgency=low
   * Disable LicenseForceSelection.
   * On novice mode, skip grub confirmation.
   * Add dialog to choose desktop environment (GNOME, KDE, XFCE, None).
+  * Detect and preseed passwd/user-fullname (without setting the seen
+    flag).
 
- -- Robert Millan <rmh@aybabtu.com>  Fri, 14 Sep 2007 17:29:31 +0200
+ -- Robert Millan <rmh@aybabtu.com>  Fri, 14 Sep 2007 19:04:37 +0200
 
 win32-loader (0.6.0~pre3) unstable; urgency=low
 
